# harv

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  pytest.yml
docs/: about.md
src/harv/: __init__.py  decorators.py  naming_standards.py  pandas_to_pyspark_df.py  watermark.py
src/harv/clients/: asyncapi.py  exceptions.py
src/harv/detools/: analyzer.py  skew_inspector.py
src/harv/ingest/: ingest.py  parsers.py
src/harv/optimize/: optimize.py
src/harv/raw/: autoloader.py  flatten.py
tests/: test_autoloader.py  test_clients_asyncapi.py  test_flatten.py  test_ingest.py  test_mock_pyspark.py  test_naming_standards.py  test_optimize.py  test_pandas_to_pyspark_df.py  test_parsers.py  test_watermark.py
